# Polyphase-Engine

./: .dockerignore  .gitignore  CMakeLists.txt  HTTPClientLog.txt  Polyphase.sln  mkdocs.yml
.llm/: Serial.md  (+3 more)
Engine/Source/: CMakeLists.txt
Engine/Source/Audio/: Audio.cpp  Audio.h  AudioAnalysis.cpp  AudioAnalysis.h  AudioConstants.h  AudioTypes.h
Engine/Source/Audio/3DS/: Audio_3DS.cpp
Engine/Source/Audio/Android/: Audio_Android.cpp
Engine/Source/Audio/Dolphin/: Audio_Dolphin.cpp
Engine/Source/Audio/Linux/: Audio_Linux.cpp
Engine/Source/Audio/Windows/: Audio_Windows.cpp
Engine/Source/Editor/: ActionManager.cpp  ActionManager.h  BuildDependencyWindow.cpp  EditorImgui.cpp  EditorImgui.h  EditorMain.cpp  EditorMainMenu.cpp  EditorMainMenu.h  EditorState.cpp  EditorState.h  EditorTypes.h  EditorUIHookManager.cpp  EditorUIHookManager.h  EditorUtils.cpp  EditorWidgets.cpp  EditorWidgets.h  FeatureFlags.cpp  InputManager.cpp  InputMapWindow.cpp  PlayerInputDebugger.cpp  PlayerInputEditor.cpp  PlayerInputEditor.h
Engine/Source/Editor/Addons/: AddonCreator.cpp  AddonDependencyResolver.cpp  AddonDependencyResolver.h  AddonManager.cpp  AddonManager.h  AddonScriptRunner.cpp  AddonScriptRunner.h  AddonsMenu.cpp  AddonsWindow.cpp  AddonsWindow.h  NativeAddonManager.cpp  NativeAddonManager.h
Engine/Source/Editor/AnimationBrowser/: AnimationBrowser.cpp
Engine/Source/Editor/AppSettings/: AppSettingsWindow.cpp  AppSettingsWindow.h
Engine/Source/Editor/AutoUpdater/: AutoUpdater.cpp  AutoUpdater.h  HttpClient.h  HttpClient_Linux.cpp  HttpClient_Windows.cpp  ReleaseInfo.cpp  ReleaseInfo.h
Engine/Source/Editor/CliTerminal/: TerminalPanel.cpp
Engine/Source/Editor/ControllerServer/: ControllerServer.cpp  ControllerServer.h  ControllerServerRoutes.cpp  ControllerServerRoutes.h  ControllerServerTypes.h  EditorScreenshot.cpp  EditorScreenshot.h
Engine/Source/Editor/DebugLog/: DebugLogWindow.cpp  DebugLogWindow.h
Engine/Source/Editor/GamePreview/: GamePreview.cpp  GamePreview.h
Engine/Source/Editor/Git/: GitWorkspaceWindow.cpp
Engine/Source/Editor/Hotkeys/: EditorAction.cpp  EditorAction.h  EditorHotkeyMap.cpp  EditorHotkeyMap.h
Engine/Source/Editor/InputTester/: InputTesterPanel.cpp  InputTesterPanel.h
Engine/Source/Editor/LuaDebugger/: LuaDebugger.cpp  LuaDebugger.h  LuaDebuggerPanel.cpp  LuaDebuggerPanel.h
Engine/Source/Editor/NodeGraph/: NodeGraphPanel.cpp
Engine/Source/Editor/Packaging/: BuildProfile.cpp  BuildProfile.h  BuildTargetRegistry.cpp  BuildTargetRegistry.h  BuiltInBuildTargets.cpp  BuiltInBuildTargets.h  PackagingWindow.cpp  PackagingWindow.h
Engine/Source/Editor/Preferences/: JsonSettings.cpp  PreferencesManager.cpp
Engine/Source/Editor/Profiling/: ProfilingWindow.cpp
Engine/Source/Editor/ProjectSelect/: ProjectSelectWindow.cpp  ProjectSelectWindow.h  TemplateData.h  TemplateManager.cpp  TemplateManager.h
Engine/Source/Editor/Runtime/: EngineRuntimeValidator.cpp  EngineRuntimeValidator.h
Engine/Source/Editor/ScriptCreator/: ScriptCreatorDialog.cpp
Engine/Source/Editor/ScriptEditor/: ScriptEditorWindow.cpp
Engine/Source/Editor/SecondScreenPreview/: SecondScreenPreview.cpp
Engine/Source/Editor/SpriteAnimationEditor/: SpriteAnimationAtlasEditor.cpp  SpriteAnimationAtlasEditor.h
Engine/Source/Editor/ThemeEditor/: ThemeEditorWindow.cpp
Engine/Source/Editor/Timeline/: TimelinePanel.cpp
Engine/Source/Editor/Validation/: ValidationLog.cpp  ValidationLog.h
Engine/Source/Engine/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  AssetRef.h  AudioManager.cpp  AudioManager.h  CameraFrustum.cpp  CameraFrustum.h  Constants.h  Datum.cpp  Datum.h  EmbeddedFile.h  Engine.cpp  Engine.h  EngineRuntimeManifest.cpp  EngineRuntimeManifest.h  EngineTypes.h  Enums.h  FileWatcher.cpp  FileWatcher.h  Log.cpp  Maths.h  NodePath.cpp  NodePath.h  OctHookAutoRegister.cpp  PolyphaseAbi.h  Renderer.cpp  Renderer.h  Script.cpp  Script.h  ScriptUtils.cpp  ScriptUtils.h  SerialManager.cpp  SerialManager.h  SignalBus.cpp  SignalBus.h  Utilities.cpp  World.cpp  stb_implementation.cpp
Engine/Source/Engine/Animation/: SpriteAnimPlayback.cpp  SpriteAnimPlayback.h
Engine/Source/Engine/Assets/: DataAsset.h  Material.h  MaterialBase.cpp  MaterialBase.h  MaterialInstance.h  MaterialLite.h  ParticleSystem.h  Scene.cpp  SkeletalMesh.cpp  SkeletalMesh.h  SoundWave.cpp  SoundWave.h  SpriteAnimation.cpp  SpriteAnimation.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h  TextureAtlasUtil.cpp  TextureAtlasUtil.h  TileMap.cpp  TileSet.cpp  TileSet.h
Engine/Source/Engine/NodeGraph/: GraphNode.cpp  GraphTypes.cpp
Engine/Source/Engine/Nodes/: Node.cpp  Node.h  NodeClipboard.cpp  NodeClipboard.h  NodeGraphPlayer.cpp  NodeGraphPlayer.h  SpriteAnimator.cpp  SpriteAnimator.h
Engine/Source/Graphics/: Graphics.h  GraphicsConstants.h  GraphicsTypes.h
Engine/Source/Input/: Input.h  InputConstants.h  InputMap.cpp  InputTypes.h  PlayerInputSystem.cpp  PlayerInputSystem.h
Engine/Source/LuaBindings/: AnimatedSprite3d_Lua.cpp  AnimatedSprite3d_Lua.h  AnimatedWidget_Lua.cpp  AnimatedWidget_Lua.h  Audio3d_Lua.cpp  Audio3d_Lua.h  Audio_Lua.cpp  Audio_Lua.h  Debugger_Lua.cpp  Debugger_Lua.h  Http_Lua.cpp  Http_Lua.h  LuaBindings.cpp  LuaTypeCheck.h  LuaUtils.h  Misc_Lua.cpp  Node_Lua.cpp  Node_Lua.h  SaveData_Lua.cpp  SaveData_Lua.h  Serial_Lua.cpp  Serial_Lua.h  SignalBus_Lua.cpp  SignalBus_Lua.h  SpriteAnimation_Lua.cpp  SpriteAnimation_Lua.h  SpriteAnimator_Lua.cpp  SpriteAnimator_Lua.h
Engine/Source/Network/: Network.h  NetworkTypes.h
Engine/Source/Plugins/: EditorUIHooks.h  PolyphaseBuildTargetAPI.h  PolyphaseEngineAPI.h  PolyphasePluginAPI.h  RuntimePluginManager.cpp
Engine/Source/Serial/: Serial.h  SerialTypes.h
Engine/Source/System/: ModuleLoader.cpp  ModuleLoader.h  System.h  SystemConstants.h  SystemTypes.h  SystemUtils.cpp
Standalone/: CMakeLists.txt  EmbeddedAssets.h  Makefile_3DS  Makefile_GCN  Makefile_Linux_Editor  Makefile_Linux_Game  Makefile_Wii  Standalone.vcxproj  Standalone.vcxproj._  Standalone.vcxproj.filters
Standalone/Source/: Main.cpp
(+212 files in other folders)
